# esp-rover

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docroot.html  env.sh  flash.sh  lidar.xlsx  monitor.sh  run.sh  sdkconfig.defaults  ziputil
components/: CMakeLists.txt  Kconfig  rplidar_main.cpp
components/include/: esplidar.h  esplidartypes.h  espserial.h
components/src/: esplidar.cpp  espserial.cpp
components/vl53l0x/: vl53l0x.cpp  (+1 more)
main/: CMakeLists.txt  Kconfig  Kconfig.projbuild  app_main.c  app_main.cpp  main.c  main.cpp  main.h
main/include/: TOFArray.h  app_auto_drive.hpp  app_drive.hpp  app_httpd.hpp  app_look.hpp  app_vision.hpp  autodrive.h  calibration.h  docroot.h  drivetrain.h  globals.h  motion.h  proximity.h  proximity.hpp  robot.h  robot.hpp  servo.h  servo.hpp  sonar.h  structs.h  tof.h  tof_array.hpp  tof_sensor.hpp  uart.h  vl53l0x.hpp  webserver.h
main/include/app/: app_auto_drive.h  app_drive.h  app_httpd.h  app_look.h  app_proximity.h
main/include/http/: docroot.h  webserver.h
main/include/motor/: servo.h
main/include/robot/: calibration.h  drivetrain.h  robot.h
main/include/sensor/: tofarray.h  tofsensor.h  vl53l0x.h
main/include/util/: proximity.h
main/include/web/: docroot.h
main/src/: app_auto_drive.cpp  app_drive.cpp  app_httpd.cpp  app_look.cpp  app_vision.cpp  proximity.cpp  robot.cpp  servo.cpp  tof_array.cpp  tof_sensor.cpp  vl53l0x.cpp
main/src/app/: app_auto_drive.cpp  app_drive.cpp  app_httpd.cpp  app_look.cpp  app_proximity.cpp
main/src/motor/: servo.cpp
main/src/sensor/: tofarray.cpp  vl53l0x.cpp
